2011-02-11  Severin Gehwolf  <sgehwolf@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.1.
	* Linux_Tools_Project/OProfile/User_Guide/Installation-and-Set-Up.html: Update Oprofile documentation
	to reflect opxml removal.
	* Linux_Tools_Project/OProfile/User_Guide/Troubleshooting.html: Ditto. 
	* Linux_Tools_Project/OProfile/User_Guide/User-Guide.html: Ditto.
	* toc.xml: Ditto.

2010-10-19  Alexander Kurtakov  <akurtako@redhat.com>

	* src: Removed.
	* userguide: Removed.
	* images/home.gif: New file.
	* images/next.gif: New file.
	* images/prev.gif: New file.
	* Linux_Tools_Project/OProfile/User_Guide/Example-Project.html: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Icon-oprofile_dependent.gif: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Icon-oprofile_event.gif: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Icon-oprofile_image.gif: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Icon-oprofile_sample.gif: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Icon-oprofile_session.gif: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Icon-oprofile_symbol.gif: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Oprofile_manual_dialog.png: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Oprofile_manual_shortcut.png: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Screenshot-global_config.png: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Screenshot-installscript_error_dialog.png: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Screenshot-one-click_launch.png: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Screenshot-opcontrol_consolehelper.png: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Screenshot-oprofile_event_timer.png: New file.
	* Linux_Tools_Project/OProfile/User_Guide/images/Screenshot-oprofile_eventconfig.png: New file.