@@ -7,7 +7,9 @@ bin.includes = plugin.xml,\
                about.html,\
                Linux_Tools_Project/,\
                toc-doc.xml,\
-               images/
+               images/,\
+               book.css
+
 src.includes = toc.xml,\
                doc/,\
                about.html
